--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-browser",
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://wardaddy98.github.io/github-browser",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
